--- a/style-bis.css
+++ b/style-bis.css
@@ -21,14 +21,11 @@
     --font: sans-serif;
     --roboto: 'Roboto', sans-serif;
     --padding-label: 0.4em 0.2em 0.2em 0.2em;
-
 }
 
 
 .container {
     /* display */
-    width: 100%;
-    height: 100vh;
     display: flex;
     /* font-style */
     font-family: var(--roboto);
@@ -46,7 +43,9 @@
     background-image: url(./images/nicole.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     width: 50%;
+    height: 100vh;
 }
 
 
@@ -57,27 +56,26 @@
     letter-spacing: 0.1em;
     /* display */
     display: flex;
-    width: 30%;
     /* box-model */
-    padding: 10% 0 0 6%;
+    padding: 3% 0 0 7%;
 
 
 }
 
 .presentation__title--logo {
     /* display */
-    width: 18%;
+    width: 2em;
 }
 
 .presentation__title--txt {
     /* font-style */
-    font-size: 1.5em;
+    font-size:2em;
     font-weight: bold;
     text-transform: uppercase;
     /* display */
-    width: 2em;
+    width: 25%;
     /* box-model */
-    margin: 1em 0 0 0.5em;
+    margin: 1.5em 0 0 0.5em;
 }
 
 
@@ -113,16 +111,19 @@
 .last-news__txt {
     /* font-style */
     font-weight: lighter;
+    font-size: 1em;
 }
 
 
 /* INFO */
 
 .footer-info {
+    /* font-style */
+    font-size: 1em;
     /* display */
     position: absolute;
     bottom: 3%;
-    left: 20%;
+    right: 50%;
 }
 
 .info {
@@ -161,21 +162,23 @@
 .news {
     /* display */
     width: 50%;
+    height: 100vh;
+    overflow-y: scroll;
+
 }
 
 .news__header {
     /* display */
     width: 100%;
-    height: 3em;
     background-color: var(--header-bg);
 }
 
 .news__header-title {
     /* font-style */
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: bold;
     /* box-model */
-    padding: 0.5em 0 0 1em;
+    padding: 0.5em 0 0.5em 1em;
 }
 
 /* ARTICLE */
@@ -185,8 +188,6 @@
     flex-wrap: wrap;
     justify-content: center;
     overflow-y: scroll;
-    height: 55.5em;
-
 }
 
 .news__article--bloc {
@@ -270,7 +271,7 @@
 
 .news__article--author-name {
     /* font-style */
-    font-size: 0.85em;
+    font-size: 0.65em;
     font-weight: bold;
     /* box-model */
     padding-left: 0.5em;
@@ -285,7 +286,7 @@
 
 .news__article--txt {
     /* font-style */
-    font-size: 0.9em;
+    font-size: 1em;
     line-height: 1.5em;
     /* box-model */
     padding: 1em 0;
@@ -306,7 +307,7 @@
 
 /* MEDIA QUERIES */
 
-@media (max-width: 520px) {
+@media (min-width: 0px) and (max-width: 800px) {
 
     .container {
         /* display */
@@ -317,12 +318,10 @@
     .presentation {
         /* display */
         width: 100%;
-        background-size: 100%;
-        /* box-model */
-        padding-bottom: 15em;
     }
 
     .footer-info {
+        font-size: 00.65em;
         /* display */
         bottom: 0;
         left: 0;
@@ -332,6 +331,10 @@
 
     .news {
         /* display */
+        width: 100%;
+    }
+
+    .news__article--bloc {
         width: 100%;
     }
 
@@ -348,9 +351,8 @@
     .presentation {
         /* display */
         width: 100%;
-        background-size: 100%;
         /* box-model */
-        padding-bottom: 63em;
+        
     }
 
     .last-news {
@@ -372,5 +374,14 @@
         width: 100%;
     }
 
+    
 
+
+}
+
+@media (min-width: 900px) and (max-width: 1380px) {
+
+    .news__article--bloc {
+        width: 100%;
+    }
 }
